Add simple icon for extension

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simplecherrytimeline",
   "publisher": "NaturalCherry",
   "repository": "https://github.com/IsaacCorrales03/Simple-TimeLine",
-
+  "icon": "icon.png",
   "displayName": "Simple CherryTimeLine",
   "description": "Extensión que permite visualizar y gestionar una línea de tiempo interactiva dentro de VS Code.",
   "version": "0.0.1",
